fixing the changes
